--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 ﻿altair==5.5.0
 attrs==25.1.0
 blinker==1.9.0
+cairocffi==1.3.0
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -19,7 +20,7 @@ narwhals==1.28.0
 numpy==2.2.3
 packaging==24.2
 pandas==2.2.3
-pillow==11.1.0
+Pillow==11.1.0
 protobuf==5.29.3
 pyarrow==19.0.1
 pydeck==0.9.1
